# retail-ops-control-tower

./: .gitignore  FABLE_TASK.md  HTML_TASK.md  LICENSE  README.md  VISION_TASK.md  pyproject.toml
.hermes/: pr_body.json
artifacts/: cv-bullets-id.md  demo-checklist.md  portfolio-summary.md
dashboard/: app.py
docs/: analytical_report_hermes.html  architecture.html  data-dictionary.md  decision_memo.md  implementation-plan.md  insight_engine_story.md  prd.md  scope-guard.md  walkthrough_script.md
notebooks/: insight_engine_story.ipynb  insight_engine_story_v2.ipynb  insight_engine_story_v2_executed.ipynb
reports/: executive_summary.md  final-launcher-checks.md  final-report.md  final-review.md  insights.md  judge-portfolio-report.md  judge-technical-report.md  learning-log.md  notebook-verification.md  qa_report.md  sweep-report.md  t01-assumption-audit.md  t02-comparison-audit.md  t03-gap-analysis.md  validation_summary.md  weekly_ops_report.md
retail_ops_control_tower/: __init__.py  __main__.py  cli.py  config.py  constants.py  data_generation.py  insights.py  metrics.py  reporting.py  validation.py
scripts/: build_exception_table.py  build_insights.py  build_kpi_summary.py  build_notebook_v2.py  build_verification.py  generate_demo_data.py  generate_sample_data.py  generate_validation_summary.py  generate_weekly_report.py  render_architecture_diagram.py  smoke.sh
tests/: conftest.py  test_action_queue.py  test_actions.py  test_cli.py  test_constants.py  test_data_generation.py  test_exceptions.py  test_imports.py  test_insights.py  test_io.py  (+8 more)
(+105 files in other folders)
