[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-ops-control-tower"
version = "0.1.0"
description = "Retail Operations Control Tower - simulated multi-store campaign execution monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Retail Ops Control Tower"},
]
keywords = ["retail", "operations", "control-tower", "campaign", "reconciliation", "exceptions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "pandas>=2.2",
    "plotly>=5.20",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.8",
]

[project.scripts]
retail-ops-generate-data = "retail_ops_control_tower.cli:generate_data"
retail-ops-build-exceptions = "retail_ops_control_tower.cli:build_exceptions"
retail-ops-report = "retail_ops_control_tower.cli:report"

[tool.setuptools.packages.find]
include = ["retail_ops_control_tower*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
